[gd_scene load_steps=2 format=3 uid="uid://d3nfdrw7awxad"]

[ext_resource type="Script" path="res://Scripts/title.gd" id="1_4tu01"]

[node name="Title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4tu01")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0922388, 0.0545797, 0.238187, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -208.5
offset_right = 20.0
offset_bottom = -185.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 112
text = "KFC"
horizontal_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -96.5
offset_top = -531.0
offset_right = 96.5
offset_bottom = -397.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 92
text = "Play"

[node name="Button2" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -96.5
offset_top = -235.0
offset_right = 96.5
offset_bottom = -101.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 92
text = "Settings"

[node name="Button3" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -96.5
offset_top = -374.0
offset_right = 96.5
offset_bottom = -240.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 92
text = "Load Game"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
